--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "melphoto",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://creepykedi.github.io/AndreyMelnikovPhoto",
+  "homepage": "http://creepykedi.github.io/AndreyMelnikovPhoto/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
