--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "gsap": "^3.5.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-grid-gallery": "^0.5.5",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "simple-react-lightbox": "^3.3.4-1"
   },
   "scripts": {
     "start": "react-scripts start",
